# ai-bike-fit

./: .gitignore  CLAUDE.md  NOTICE.md  PROMPT.md  README.fr.md  README.md  analyze_bikefit.py  bike_calib.py  fit_metrics.py  pyproject.toml  requirements.txt  rider.example.yaml  setup.ps1  setup.sh  test_metrics.py
.claude/skills/bikefit/: SKILL.md
files/: bikefit-research-ranges.md  filming-guide.md  fit-rules.md
videos/: README.md
